# corvus

./: .gitignore  .hlint.yaml  .traerules  AGENTS.md  CLAUDE.md  Makefile  README.md  command_example.txt  corvus.cabal  corvus.service  example-apply.yml  fourmolu.yaml  package.yaml  pyproject.toml  stack.yaml  systemd  template.yml  test_data.sql
.claude/: settings.local.json
cbits/: netns.c  netns.h  python_ext.c  python_ext.h  vdens.c  vdens.h  (+2 more)
integration_tests/: README.md  conftest.py  pyproject.toml
integration_tests/corvus_test_harness/: __init__.py  base_images.py  cases.py  component_deploy.py  host_binary.py  images.py  inner.py  netd_client.py  outer.py  pki.py  postgres.py  runner.py  spice.py  ssh.py  topology.py  transport.py  version.py  vm.py  web_gateway.py
integration_tests/scripts/: crv-it  detect_workers.py  ssh-it
integration_tests/tests/: test_admin_lifecycle.py  test_apply.py  test_autostart.py  test_bridge_nic.py  test_build_cache.py  test_build_installer.py  test_build_modes.py  test_build_pipeline.py  test_cloud_init.py  test_cloud_init_cli.py  test_component_restart.py  test_disk.py  test_disk_copy_move.py  test_guest_exec.py  test_hmp_monitor.py  test_mtls_auth.py  test_multi_node.py  test_multi_node_disks.py  test_netd_smoke.py  test_networking_managed.py  test_networking_rootful.py  test_networking_user_tap.py  test_nodes.py  test_observability.py  test_quickstart.py  test_serial_console.py  test_snapshots.py  test_snapshots_vmstate.py  test_state_machine_errors.py  test_subscription_lifetimes.py  test_task_cancellation.py  test_task_history.py  test_templates.py  test_vde_networking.py  test_virtiofs.py  test_vm_lifecycle.py  test_vm_migration.py  test_vm_save_load.py  test_vm_start_failures.py  test_vxlan.py  (+2 more)
python/: README.md  pyproject.toml  template.py.ginger
python/corvus_admin/: __main__.py  binaries.py  ca.py  cli.py  deploy.py  privesc.py  pyproject.toml  quickstart.py  register.py  runner.py  status.py  store.py  systemd.py
python/corvus_admin/_systemd_templates/: corvus-netd.service.j2  corvus-nodeagent.service.j2  corvus-web.service.j2  corvus.service.j2
python/corvus_admin/corvus_admin/: __init__.py  ca.py  cli.py  deploy.py  runner.py  status.py
python/corvus_admin/tests/: conftest.py  test_ca.py  test_cli.py  test_deploy.py  test_runner_local.py
python/corvus_client/: __init__.py  _entityref.py  _native.pyi  _runloop.py  _schema.py  _tls.py  client_base.py  exceptions.py  types.py
python/corvus_client/_async/: __init__.py  _convert.py  build.py  client.py  cloudinit.py  disk.py  network.py  node.py  sshkey.py  streams.py  task.py  template.py  vm.py
python/corvus_client/_sync/: __init__.py  _resource.py  client.py  cloudinit.py  disk.py  network.py  node.py  sshkey.py  task.py  template.py  vm.py
python/corvus_client/schema/: cloudinit.capnp  common.capnp  enums.capnp  network.capnp  nodeagent.capnp  task.capnp  template.capnp  vm.capnp
python/corvus_desktop/: __init__.py  __main__.py  app.py  cli.py  client_bridge.py
python/corvus_desktop/dialogs/: __init__.py  add_net_if.py  add_shared_dir.py  attach_disk.py  attach_ssh_key.py  disk_create.py  disk_rebase_copy_move.py  form_dialog.py  guest_exec.py  network_create.py  network_edit.py  node_add.py  node_edit.py  ssh_key_add.py  template_instantiate.py  template_yaml.py  vm_create.py  vm_edit.py  vm_migrate.py
python/corvus_desktop/models/: __init__.py  disk_table.py  network_table.py  node_table.py  ssh_key_table.py  task_table.py  template_table.py  vm_table.py
python/corvus_desktop/widgets/: __init__.py  cloud_init_panel.py  entity_combo.py  serial_console.py  spice_launcher.py  stats_chart.py  status_badge.py  tray.py  yaml_editor.py
python/corvus_desktop/windows/: __init__.py  apply.py  build.py  disk_detail.py  disk_list.py  main_window.py  network_detail.py  network_list.py  node_detail.py  node_list.py  ssh_key_detail.py  ssh_key_list.py  task_detail.py  task_list.py  template_detail.py  template_list.py  vm_detail.py  vm_list.py
python/corvus_web/: __init__.py  __main__.py  app.py  cli.py  config.py  deps.py
python/corvus_web/routes/: __init__.py  apply.py  disks.py  metrics.py  networks.py  nodes.py  spa.py  spice.py  ssh_keys.py  system.py  tasks.py  templates.py  vms.py
python/tests/: _helpers.py  conftest.py  test_exceptions.py  test_network.py  test_node.py  test_skeleton.py  test_status.py  test_sync.py  test_task.py  test_template.py
python/tests/corvus_admin/: conftest.py  test_binaries.py  test_ca.py  test_cli.py  test_deploy.py  test_privesc.py  test_quickstart.py  test_register.py  test_renew.py  test_runner_local.py  test_status.py  test_systemd_templates.py
python/tests/corvus_client/: _helpers.py  conftest.py  test_build.py  test_cloudinit.py  test_disk.py  test_entityref.py  test_exceptions.py  test_network.py  test_node.py  test_sshkey.py  test_status.py  test_sync.py  test_task.py  test_template.py  test_vm.py
python/tests/corvus_desktop/: conftest.py  test_bridge.py  test_disk_table_model.py  test_network_table_model.py  test_node_table_model.py  test_phase11_build.py  test_phase12_polish.py  test_phase6_windows.py  test_phase7_windows.py  test_phase8_dialogs.py  test_phase9_dialogs.py  test_ssh_key_table_model.py  test_stats_chart.py  test_task_table_model.py  test_template_table_model.py  test_tray.py  test_vm_table_model.py  test_widgets.py  test_windows.py  test_yaml_editor.py
python/tests/corvus_web/: test_error_handler.py
tests-integration/: README.md  conftest.py  pyproject.toml
tests-integration/corvus_test_harness/: __init__.py  base_images.py  cases.py  host_binary.py  images.py  inner_vm.py  outer.py  postgres.py  spice.py  ssh.py  topology.py  transport.py  version.py  vm.py
tests-integration/images/: corvus-integration-test.yml
tests-integration/tests/: test_apply.py  test_build_pipeline.py  test_cloud_init.py  test_disk.py  test_guest_exec.py  test_multi_node.py  test_networking_rootful.py  test_serial_console.py  test_snapshots.py  test_templates.py  test_virtiofs.py  test_vm_lifecycle.py
(+491 files in other folders)
