[project]
name = "corvus"
version = "0.2.0"
description = "Corvus VM manager — Python client, admin CLI, and integration-test harness."
requires-python = ">=3.10"
dependencies = [
    # Cap'n Proto RPC client used by every Python entry point. The
    # daemon's wire protocol is Cap'n Proto; the schema files live
    # in /schema and are symlinked into corvus_client/schema/.
    "pycapnp>=2.2.0",
    # YAML parsing for templates and the declarative `crv apply`
    # YAML config inside corvus_client.
    "PyYAML>=6.0",
    # X.509 generation / signing / private-key handling for
    # corvus_admin (mint, deploy, renew certificates).
    "cryptography>=42",
    # Click drives the `corvus-admin` CLI's command hierarchy.
    "click>=8",
]

[project.optional-dependencies]
# Integration-test harness deps — opt-in via `pip install -e .[harness]`.
# Keeps a plain `pip install corvus` slim for downstream client users.
harness = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
]

[project.scripts]
corvus-admin = "corvus_admin.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Three top-level packages, source dirs in two different trees.
# `corvus_client` and `corvus_admin` live under /python; the
# integration-test harness lives under /integration_tests.
[tool.setuptools]
packages = [
    "corvus_client",
    "corvus_client._async",
    "corvus_client._sync",
    "corvus_admin",
    "corvus_test_harness",
]

[tool.setuptools.package-dir]
corvus_client = "python/corvus_client"
"corvus_client._async" = "python/corvus_client/_async"
"corvus_client._sync" = "python/corvus_client/_sync"
corvus_admin = "python/corvus_admin"
corvus_test_harness = "integration_tests/corvus_test_harness"

[tool.setuptools.package-data]
corvus_client = ["schema/*.capnp"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".venv*",
    "*.egg-info",
    # The Cap'n Proto schema symlink target inside corvus_client/ —
    # not Python source.
    "schema",
    # Reserved exclusion for future codegen output. Nothing currently
    # matches: `_sync/` is hand-written, `_schema.py` is hand-written,
    # no `*_capnp.py` stubs. The pattern is here so any future
    # codegen drop-in automatically gets the lint/typecheck carve-out.
    "**/_generated/**",
]

[tool.ruff.lint]
# Conservative day-1 ruleset. Rule groups documented at
# https://docs.astral.sh/ruff/rules/.
select = [
    "E", "W",     # pycodestyle errors / warnings
    "F",          # pyflakes (unused imports, undefined names)
    "I",          # isort (import order)
    "B",          # flake8-bugbear (likely-bug patterns)
    "UP",         # pyupgrade (modernise syntax for the target version)
    "SIM",        # flake8-simplify (cleaner conditionals)
    "RUF",        # Ruff-specific
]
ignore = [
    # The formatter handles long lines structurally; the few legit
    # long lines (URLs, error strings) shouldn't get hand-wrapped.
    "E501",
    # Stylistic rules whose existing-codebase pattern we accept:
    #   SIM105 — try/except/pass is idiomatic for best-effort cleanup
    #            paths (socket close on shutdown, fs path cleanup);
    #            contextlib.suppress reads worse for short blocks.
    #   SIM108 — explicit if/else is often clearer than ternaries.
    #   SIM117 — keeping nested `with` blocks per resource is fine
    #            when each acquisition reads as its own step.
    #   RUF005 — list-literal concat (`[a] + xs`) reads fine in the
    #            argv-building style code that uses it.
    #   RUF002, RUF003 — typographic dashes / em-dashes in docstrings
    #            and comments aren't ambiguity hazards.
    "SIM105", "SIM108", "SIM117",
    "RUF005",
    "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests use a few patterns that are noise in production code but
# fine in fixtures.
"**/tests/**" = ["B011"]            # `assert False` is acceptable in tests
"**/conftest.py" = ["F401"]         # fixtures are re-exported, not "unused"

[tool.pytest.ini_options]
# Both /python/tests and /integration_tests/tests are discoverable
# from the repo root. Selecting which set to run is the Makefile's
# job (see `python-test` / `integration-tests` targets).
testpaths = ["python/tests", "integration_tests/tests"]
pythonpath = ["."]
timeout = 600
markers = [
    "slow: tests that take more than a minute (boot cycle, image build)",
    "rootful: tests that exercise root-only paths inside the inner VM",
]
addopts = "--dist=loadscope --import-mode=importlib"
