[project]
name = "corvus"
version = "0.14.0.0"
description = "Corvus VM manager — Python client, admin CLI, and integration-test harness."
requires-python = ">=3.10"
dependencies = [
    # Cap'n Proto RPC client used by every Python entry point. The
    # daemon's wire protocol is Cap'n Proto; the schema files live
    # in /schema and are symlinked into corvus_client/schema/.
    "pycapnp>=2.2.0",
    # YAML parsing for templates and the declarative `crv apply`
    # YAML config inside corvus_client.
    "PyYAML>=6.0",
    # X.509 generation / signing / private-key handling for
    # corvus_admin (mint, deploy, renew certificates).
    "cryptography>=42",
    # Click drives the `corvus-admin` CLI's command hierarchy.
    "click>=8",
    # Jinja2 renders the systemd unit-file templates that
    # corvus-admin generates during `quickstart` / `deploy`.
    "jinja2>=3",
    # FastAPI + uvicorn power the `corvus-web` HTTP gateway.
    # The gateway is a thin REST + WebSocket bridge to the daemon's
    # Cap'n Proto RPC, built on top of `corvus_client.AsyncClient`.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Prometheus exposition format for the corvus-web /metrics
    # endpoint (per-VM and per-node gauges / counters; see
    # python/corvus_web/routes/metrics.py).
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
# Integration-test harness deps — opt-in via `pip install -e .[harness]`.
# Keeps a plain `pip install corvus` slim for downstream client users.
harness = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
]
# Desktop GUI deps — opt-in via `pip install -e .[desktop]`. PySide6 is
# ~150 MiB; keeping it optional spares the corvus-admin / corvus-web
# install paths. pyte is the pure-Python VT102 emulator the serial
# console widget renders into a QAbstractScrollArea (no native deps).
desktop = [
    "PySide6>=6.6",
    "pyte>=0.8",
]

[project.scripts]
corvus-admin = "corvus_admin.cli:main"
corvus-web = "corvus_web.cli:main"
corvus-desktop = "corvus_desktop.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Four top-level packages, source dirs in two different trees.
# `corvus_client`, `corvus_admin`, and `corvus_web` live under /python;
# the integration-test harness lives under /integration_tests.
[tool.setuptools]
packages = [
    "corvus_client",
    "corvus_client._async",
    "corvus_client._sync",
    "corvus_admin",
    "corvus_test_harness",
    "corvus_web",
    "corvus_web.routes",
    "corvus_desktop",
    "corvus_desktop.dialogs",
    "corvus_desktop.models",
    "corvus_desktop.widgets",
    "corvus_desktop.windows",
]

[tool.setuptools.package-dir]
corvus_client = "python/corvus_client"
"corvus_client._async" = "python/corvus_client/_async"
"corvus_client._sync" = "python/corvus_client/_sync"
corvus_admin = "python/corvus_admin"
corvus_test_harness = "integration_tests/corvus_test_harness"
corvus_web = "python/corvus_web"
"corvus_web.routes" = "python/corvus_web/routes"
corvus_desktop = "python/corvus_desktop"
"corvus_desktop.dialogs" = "python/corvus_desktop/dialogs"
"corvus_desktop.models" = "python/corvus_desktop/models"
"corvus_desktop.widgets" = "python/corvus_desktop/widgets"
"corvus_desktop.windows" = "python/corvus_desktop/windows"

[tool.setuptools.package-data]
corvus_client = ["schema/*.capnp"]
# Systemd unit templates that `corvus-admin quickstart` renders.
# The canonical location is python/corvus_admin/_systemd_templates/;
# the repo-root `systemd/` symlink points at the same directory for
# operator visibility.
corvus_admin = ["_systemd_templates/*.j2"]
# Frontend SPA bundle. The `make web-build` target drops vite output
# into python/corvus_web/static/; the wheel ships it so a single
# `pip install corvus` gives the operator everything corvus-web needs
# to serve the UI. The directory is gitignored — populated by build.
corvus_web = ["static/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".venv*",
    "*.egg-info",
    # The Cap'n Proto schema symlink target inside corvus_client/ —
    # not Python source.
    "schema",
    # Reserved exclusion for future codegen output. Nothing currently
    # matches: `_sync/` is hand-written, `_schema.py` is hand-written,
    # no `*_capnp.py` stubs. The pattern is here so any future
    # codegen drop-in automatically gets the lint/typecheck carve-out.
    "**/_generated/**",
]

[tool.ruff.lint]
# Conservative day-1 ruleset. Rule groups documented at
# https://docs.astral.sh/ruff/rules/.
select = [
    "E", "W",     # pycodestyle errors / warnings
    "F",          # pyflakes (unused imports, undefined names)
    "I",          # isort (import order)
    "B",          # flake8-bugbear (likely-bug patterns)
    "UP",         # pyupgrade (modernise syntax for the target version)
    "SIM",        # flake8-simplify (cleaner conditionals)
    "RUF",        # Ruff-specific
]
ignore = [
    # The formatter handles long lines structurally; the few legit
    # long lines (URLs, error strings) shouldn't get hand-wrapped.
    "E501",
    # Stylistic rules whose existing-codebase pattern we accept:
    #   SIM105 — try/except/pass is idiomatic for best-effort cleanup
    #            paths (socket close on shutdown, fs path cleanup);
    #            contextlib.suppress reads worse for short blocks.
    #   SIM108 — explicit if/else is often clearer than ternaries.
    #   SIM117 — keeping nested `with` blocks per resource is fine
    #            when each acquisition reads as its own step.
    #   RUF005 — list-literal concat (`[a] + xs`) reads fine in the
    #            argv-building style code that uses it.
    #   RUF002, RUF003 — typographic dashes / em-dashes in docstrings
    #            and comments aren't ambiguity hazards.
    "SIM105", "SIM108", "SIM117",
    "RUF005",
    "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests use a few patterns that are noise in production code but
# fine in fixtures.
"**/tests/**" = ["B011"]            # `assert False` is acceptable in tests
"**/conftest.py" = ["F401"]         # fixtures are re-exported, not "unused"

[tool.mypy]
python_version = "3.10"
# Same dual-root layout setuptools sees: corvus_client + corvus_admin
# live under /python; corvus_test_harness lives under /integration_tests.
# Plus `explicit_package_bases = true` so mypy resolves
# `python/tests/<pkg>/conftest.py` as `tests.<pkg>.conftest` rather
# than the bare `conftest` (which would collide between the two
# centralised subtrees).
mypy_path = "python:integration_tests"
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "(^|/)\\.venv",
    # Reserved for future codegen — see the ruff `extend-exclude`
    # entry for the same path. Nothing currently matches.
    "(^|/)_generated/",
]

# pycapnp's `capnp` module has incomplete stubs (no py.typed
# marker on the importable submodules). Treat it as untyped at
# the import boundary; calls into the dynamic cap surface still
# hit Any, which is the accepted boundary.
[[tool.mypy.overrides]]
module = "capnp"
ignore_missing_imports = true

# pytest-xdist ships without a py.typed marker. We only touch the
# scheduler surface via a small subclass in integration_tests/conftest.py;
# treating the package as untyped at the import boundary is correct.
[[tool.mypy.overrides]]
module = "xdist.*"
ignore_missing_imports = true

# corvus_admin — strict-annotated module. Keep the gate tight here:
# the admin CLI is small (~3k LoC, single subsystem) and every
# function already has reasonably narrow types thanks to Click.
[[tool.mypy.overrides]]
module = ["corvus_admin.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# corvus_client — looser for now. Ratcheting to disallow_untyped_defs
# is a future follow-up: ~244 sync-wrapper functions in _sync/ + _async/
# mirror each other and would need annotations either copied from
# the async side or wrapped through a generic helper. Until that
# pass lands, keep the baseline gentle so `make lint` stays green.
[[tool.mypy.overrides]]
module = ["corvus_client.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# corvus_web — strict-annotated module, same gate as corvus_admin.
# The web gateway is small (FastAPI routes + lifespan), all hand-written,
# and the call surface into corvus_client has typed dataclass returns
# (see python/corvus_client/types.py). Keep the gate tight from day one
# so type drift doesn't accumulate.
[[tool.mypy.overrides]]
module = ["corvus_web.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# corvus_desktop — strict-annotated module, same gate as
# corvus_admin / corvus_web. The desktop GUI is hand-written
# (no generated code) and the call surface into corvus_client has
# typed dataclass returns; new code should land annotated.
[[tool.mypy.overrides]]
module = ["corvus_desktop.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# PySide6 + pyte are optional ([desktop] extra) — the venv mypy uses
# for lint may not have them installed. Treat the imports as untyped
# at the boundary so `make lint` stays green without forcing the
# [desktop] extra into the dev venv.
[[tool.mypy.overrides]]
module = ["PySide6.*", "pyte", "pyte.*"]
ignore_missing_imports = true

# Tests + harness + the top-level conftest at integration_tests/
# (which mypy sees as bare module `conftest`): looser bar. The
# disabled error codes correspond to patterns the harness leans on
# heavily but mypy can't follow without an annotated refactor:
#   * attr-defined / arg-type — VmSsh subclasses Vm and
#     __enter__ returns the actual subclass; mypy infers the
#     base class.
#   * union-attr — Optional fields (self.cap, self.client) are
#     populated in __enter__ and accessed afterward without an
#     explicit None-guard the harness's invariant already
#     enforces.
#   * call-arg — cryptography's public_key() return is a wide
#     union; tests do `.verify(sig, msg)` which is ed25519-only
#     and not in the union of all signature shapes.
#   * unreachable — pytest fixture flow defeats mypy's narrowing.
# Full typing here is a separate effort.
[[tool.mypy.overrides]]
module = ["tests.*", "corvus_test_harness.*", "conftest"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["attr-defined", "arg-type", "union-attr", "call-arg", "unreachable", "misc", "assignment", "has-type"]

[tool.pytest.ini_options]
# Both /python/tests and /integration_tests/tests are discoverable
# from the repo root. Selecting which set to run is the Makefile's
# job (see `python-test` / `integration-tests` targets).
testpaths = ["python/tests", "integration_tests/tests"]
pythonpath = ["."]
timeout = 600
markers = [
    "slow: tests that take more than a minute (boot cycle, image build)",
    "rootful: tests that exercise root-only paths inside the inner VM",
]
# `--dist=loadscope`: each test class is pinned to one worker for its
# entire run, so the class-scoped autouse Topology fixture (one outer
# test-node VM boot per class) happens exactly once per class — not
# once per worker that happens to pick up a piece of it. `--dist=worksteal`
# was tried and rejected: stealing fires at the test level, so a stolen
# test re-runs the class fixture on the stealing worker, multiplying
# the test-node VM count beyond the number of classes.
#
# `--no-loadscope-reorder` keeps the inter-class order we set in the
# conftest hook (slow classes first → dispatched to xdist workers first).
# Without it, xdist 3.8+ silently re-sorts scopes by descending test
# count and the one-test TestWindows class lands at the tail of the
# queue, defeating longest-pole-first scheduling.
addopts = "--dist=loadscope --no-loadscope-reorder --import-mode=importlib"
