[project]
name = "corvus-test-harness"
version = "0.1.0"
description = "Integration-test harness for Corvus — spawns nested VMs, drives inner daemons via pycapnp."
requires-python = ">=3.10"
dependencies = [
    # The inner-side client is the production package from this repo;
    # install with `pip install -e ../python` alongside.
    "corvus-client",
    # The harness drives cert minting + deploy via corvus-admin's
    # `ca` / `deploy` / `runner` modules (over a NodeShellRunner that
    # wraps the SSH-over-VSOCK transport). Pull it in as an editable
    # local install — `make integration-tests` does this for the
    # harness venv automatically.
    "corvus-admin",
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["corvus_test_harness"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Each class brings up its VMs once; first boot on a cold cache can
# take a couple of minutes. The class-level timeout is generous; the
# bulk of test methods run in seconds once the topology is up.
timeout = 600
# `--dist=loadscope` keeps every class affixed to a single xdist
# worker: classes are the unit of parallelism (with `-n N`), tests
# inside a class always run sequentially on one worker so the shared
# VM(s) stay live. Without this addopts default, `pytest -n` would
# split classes mid-flight and break the shared-VM contract.
addopts = "--dist=loadscope"
markers = [
    "slow: tests that take more than a minute (boot cycle, image build)",
    "rootful: tests that exercise root-only paths inside the inner VM",
]
