[project]
name = "corvus-client"
version = "0.2.0"
description = "Python client for the Corvus VM manager, speaking Cap'n Proto RPC via pycapnp."
requires-python = ">=3.10"
dependencies = [
    "pycapnp>=2.2.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["corvus_client", "corvus_client._async", "corvus_client._sync"]

[tool.setuptools.package-data]
corvus_client = ["schema/*.capnp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
